fix(AUTH): change registration fields
* add GET method to fetch all cargos
