# routes/cargo.php
@@ -7,6 +7,7 @@ use Illuminate\Support\Facades\Route;
 
 Route::group(['middleware' => ['auth:sanctum'], 'prefix' => 'cargo'], function () {
         Route::get('/', [CargoController::class , 'index']);
+        Route::get('/all', [CargoController::class , 'all']);
         Route::get('/danger-statuses', [CargoController::class , 'getDangerStatuses']);
         Route::get('/packaging-types', [CargoController::class , 'getPackagingTypes']);
 
